# JTS

./: .gitignore  CONTRIBUTING.md  JSONLoader.py  Readme.md  airtablehelper.py  custom_parsers.py  enrich_agent.py  file_handler.py  job_post.py  jts.py  parsing_templates.py  pyproject.toml  scraper.py  templating.py  test.py  utils.py  web_parser_definitions.csv
example_files/: cover_letter_template.html  job_post.txt  knowledge.csv  resume.json  resume_template.html  resume_template_with_job_post.html  salientpoints.json
settings_files/: 0_0_all_default_settings.json  0_customizable_airtable_settings.json
