[tool.poetry]
name = "jts"
version = "0.1.0"
description = "This project aims to bring AI to job applicants in order to improve the efficacy and efficiency of their job search."
authors = ["Patrick Prasquier"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.13.3"
langchain = "^0.1.11"
rich = "^13.7.1"
docx2txt = "^0.8"
langchain-openai = "^0.0.8"
sentence-transformers = "^2.5.1"
faiss-cpu = "^1.8.0"
langchain-community = "^0.0.29"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"
pyairtable = "^2.3.3"
weasyprint = "^62.1"
pdfkit = "^1.0.0"
python-slugify = "^8.0.4"
prefy = "^0.2.1"
pypdf = "^4.3.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"